samples/_failures_safe/1761505972_f6512d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cf04d68.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_8cf04d68.c:178:5: error: expected expression at end of input
  178 |     start->visited =
      |     ^~~~~
./samples/SAFE/__tmp_8cf04d68.c:178:5: error: expected declaration or statement at end of input
